--- a/SimpleCDN/wwwroot/styles.css
+++ b/SimpleCDN/wwwroot/styles.css
@@ -6,6 +6,20 @@
 
 :root {
 	font-family: Code, monospace;
+
+	--text-color: black;
+	--background-color: white;
+	--link-color: #0000EE;
+	--hover-background: #eee;
+}
+
+@media(prefers-color-scheme: dark) {
+	:root {
+		--text-color: #eee;
+		--background-color: #111;
+		--link-color: #5555ee;
+		--hover-color: #222;
+	}
 }
 
 * {
@@ -23,11 +37,17 @@ body {
 	padding-block: 5px;
 	max-width: 100vw;
 	overflow-x: hidden;
+	background-color: var(--background-color);
+	color: var(--text-color);
 }
 
 main {
 	overflow: auto;
 	flex-grow: 1;
+}
+
+a {
+	color: var(--link-color);
 }
 
 table {
@@ -67,7 +87,7 @@ tr {
 
 tr:has(a):hover {
 	transition: background-color 200ms;
-	background-color: #eee;
+	background-color: var(--hover-color);
 }
 
 .col-name a::after {
