improve html to conform to guidelines, add option to disable blocking robots

--- a/SimpleCDN/wwwroot/styles.css
+++ b/SimpleCDN/wwwroot/styles.css
@@ -17,7 +17,7 @@
 	:root {
 		--text-color: #eee;
 		--background-color: #111;
-		--link-color: #8888ee;
+		--link-color: #9999ff;
 		--hover-color: #222;
 	}
 }
